--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -18,3 +18,5 @@ script(type="text/javascript", src="/app/cards/mvCardListCtrl.js")
 script(type="text/javascript", src="/app/cards/mvCard.js")
 script(type="text/javascript", src="/app/cards/mvCachedCards.js")
 script(type="text/javascript", src="/app/cards/mvCardDetailCtrl.js")
+script(type="text/javascript", src="/app/cards/collectionAdderCtrl.js")
+
