--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -1,17 +1,17 @@
 extends ../includes/layout
 
 block main-content
-    .navbar.navbar-inverse.navbar-fixed-top
+    .navbar.navbar-fixed-top
         .container
             .navbar-header
-                a.navbar-brand(href="/") Hearthstone Deck Ameliorator
-                    h6 -Deck building made easy
+                a.navbar-brand(href="/")
+                    img(style='max-width:100px; margin-top: 0;', src="/images/Brand.png")
             .navbar-collapse.collapse
                 ul.nav.navbar-nav
                     li
-                        a(href="/") Home
+                        .hsbutton(onclick="location='/'") HOME
                     li
-                        a(href="/cards") Cards
+                        .hsbutton(onclick="location='/cards'") CARDS
                 div(ng-include="'/partials/account/navbar-login'")
 
     section.content
