--- a/public/app/account/navbar-login.jade
+++ b/public/app/account/navbar-login.jade
@@ -2,11 +2,11 @@
     form.navbar-form(ng-hide="identity.isAuthenticated()")
         ul.nav.navbar-nav
             li
-                a(href="/signup") Sign up
+                .hsbutton.smallHsbutton(onclick="location='/signup'") Sign Up
         .form-group
-            input.form-control(placeholder="Email", ng-model="username")
+            input.form-control.input-sm(placeholder="Email", ng-model="username")
         .form-group
-            input.form-control(type="password", placeholder="Password", ng-model="password")
+            input.form-control.input-sm(type="password", placeholder="Password", ng-model="password")
         button.btn.btn-primary(ng-click="signin(username, password)") Sign In
     ul.nav.navbar-nav.navbar-right(ng-show="identity.isAuthenticated()")
         li.dropdown
