--- a/public/app/main/main.jade
+++ b/public/app/main/main.jade
@@ -1,6 +1,4 @@
 .container
     .row
-        .col-md-6
-            div(ng-include="'/partials/main/featured-cards'")
-        .col-md-6
-            div(ng-include="'/partials/main/new-cards'")
+        img.col-md-4.col-md-offset-2(src="/images/CardCollection.png")
+        img.col-md-4(src="/images/CollectionAdder.png")
