--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -59,16 +59,29 @@ footer
   line-height 190px
   text-align center
 
+#toast-container > div:hover
+  box-shadow none
+  width 338px
+  height: 208px
+  font-weight bold
+  color #1F1811
+  font-size 24px
+  line-height 190px
+  text-align center
+
 .toast-success
   background-color transparent
+  box-shadow none
 
 #toast-container > .toast-success:before
   content none
+  box-shadow none
 
 .toast-message
   margin-left -40px
 
 .navbar-nav > li > a:hover
+  box-shadow none
   background-color none
   color: #FFFFFF
 
@@ -153,5 +166,6 @@ footer
   left 15%
   top 20%
   transform translateX(-15%, -20%)
+
 
 
