--- a/public/css/site.css
+++ b/public/css/site.css
@@ -61,16 +61,29 @@ footer p {
   line-height: 190px;
   text-align: center;
 }
+#toast-container > div:hover {
+  box-shadow: none;
+  width: 338px;
+  height: 208px;
+  font-weight: bold;
+  color: #1f1811;
+  font-size: 24px;
+  line-height: 190px;
+  text-align: center;
+}
 .toast-success {
   background-color: transparent;
+  box-shadow: none;
 }
 #toast-container > .toast-success:before {
   content: none;
+  box-shadow: none;
 }
 .toast-message {
   margin-left: -40px;
 }
 .navbar-nav > li > a:hover {
+  box-shadow: none;
   background-color: none;
   color: #fff;
 }
