--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -13,10 +13,13 @@ script(type="text/javascript", src="/app/account/mvAuth.js")
 script(type="text/javascript", src="/app/account/mvUser.js")
 script(type="text/javascript", src="/app/account/mvSignupCtrl.js")
 script(type="text/javascript", src="/app/account/mvProfileCtrl.js")
+script(type="text/javascript", src="/app/account/mvProfileCollectionCtrl.js")
 script(type="text/javascript", src="/app/admin/mvUserListCtrl.js")
 script(type="text/javascript", src="/app/cards/mvCardListCtrl.js")
 script(type="text/javascript", src="/app/cards/mvCard.js")
 script(type="text/javascript", src="/app/cards/mvCachedCards.js")
 script(type="text/javascript", src="/app/cards/mvCardDetailCtrl.js")
 script(type="text/javascript", src="/app/cards/collectionAdderCtrl.js")
+
+
 
